--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
       <div class="container-fluid justify-content-end ">
         <a class="navbar-brand" href="index.html">
-          <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+          <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
         </a>
         <div class="flex-grow-1"></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -38,7 +38,7 @@
               <a class="nav-link text-white" href="echosubscription.html"> Subscription</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
+              <a class="nav-link text-white border-bottom border-primary" href="Contact_Page.html"> Contact</a>
             </li>
           </ul>
         </div>
