--- a/echosubscription.html
+++ b/echosubscription.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="bootstrap.css" rel="stylesheet">
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <body >
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
       <div class="container-fluid justify-content-end ">
         <a class="navbar-brand" href="index.html">
-          <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+          <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
         </a>
         <div class="flex-grow-1"></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -34,7 +34,7 @@
               <a class="nav-link text-white" href="Team page.html"> Team Members </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="echosubscription.html"> Subscription</a>
+              <a class="nav-link text-white border-bottom border-primary" href="echosubscription.html"> Subscription</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
