--- a/faqpage.html
+++ b/faqpage.html
@@ -9,10 +9,10 @@
     <link href="bootstrap.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
       <div class="container-fluid justify-content-end ">
         <a class="navbar-brand" href="index.html">
-          <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+          <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
         </a>
         <div class="flex-grow-1"></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -29,7 +29,7 @@
             </li>
           
             <li class="nav-item">
-              <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+              <a class="nav-link text-white border-bottom border-primary" href="faqpage.html"> F.A.Q. </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="Team page.html"> Team Members </a>
