--- a/index.html
+++ b/index.html
@@ -1,169 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
-    <link href="bootstrap.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
+  <link href="bootstrap.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container-fluid justify-content-end ">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
-          </a>
-          <div class="flex-grow-1"></div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="navbar-collapse collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-              <li class="nav-item">
-                <a class="nav-link text-white border-bottom border-primary"  href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white border-buttom border-primary"  href="shopping.html">Shopping</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white border-bottom border-primary" href="Team page.html"> Team Members </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white border-bottom border-primary" href="echosubscription.html"> Subscription</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white border-bottom border-primary" href="Contact_Page.html"> Contact</a>
-              </li>
-            </li>
-          </div>
-          <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
-          <div>
-            <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
-                width="30" class="d-inline-block align-text-top"></a>
-          </div>
-        </div>
-      </nav>
-<p  class="display-1 text-center mx-auto p-2 font-weight-normal"><span class="text-secondary"> Cop </span> &amp; <span class="text-primary">Swap</span></p>
-<br><br><br>
-<div class="col-2 mx-auto">
-  <a class="btn btn-secondary btn-lg px-5 py-3 text-se" aria-current="page" href="sign-up.html"><span class="text-warning">Get Started</span></a>
-</div>
-<br><br><br><br>
-<p class="display-3 text-center text-secondary font-size-mid">Our Mission</p>
-<br><br>
-<p class="font-size-small text-center">Our mission is to revolutionize the trading and sales market by providing a seamless trading and 
-  buying platform that fosters trust, transperancy, and prosperity for all our customers.</p>
-<br><br>
-<p class="display-3 text-center text-primary font-size-mid">What We Do</p>
-<br><br>
-<p class="font-size-small text-center">We are a company that noticed the fact that there are no trading and shopping websites. 
-  So with this newfound knowledge we took it upon ourselves to make that into a reality. This website is the result. 
-  Here you can purchase items from providers, or trade items with other users. You have the freedom with no limits. 
-  Here you can <a href="shopping.html"><span class="text-secondary">Cop</span></a> &amp; 
-  <a href="tradingpage.html"><span class="text-primary">Swap</span></a>.</p>
-<br><br>
-<p  class="text-secondary text-center display-3 font-size-mid">Testimonial</p>
-<br><br>
-<ol class="font-size-small">
-<li><p>David L.: "I was hesitant to spend money on another [type of product], but after seeing 
-  the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p></li>
-<li><p>Michael S.: "I've been struggling with [problem] for years, 
-  but ever since I started using this service, everything has turned around for me. I can't recommend it enough!"</p></li>
-<li><p>Emily R.: "I've tried countless solutions, but nothing worked until I found this product. 
-  It's like a miracle in a bottle. I've never felt better!"</p></li>
-<li><p>David L.: "I was hesitant to spend money on another [type of product], 
-  but after seeing the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p></li>
-</ol>
-<footer class="text-center text-lg-start bg-body-tertiary text-muted">
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
-    </div>
-    <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
+
+<body class="text-white">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
+    <div class="container-fluid justify-content-end ">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
       </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-  </section>  
-  <section class="">
-    <div class="container text-center text-md-start mt-5">
-      <div class="row mt-3"> 
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-4"></i>EchoTradez
-          </h6>
-          <a href="#!">
-              <img src="images/Logo Transparent.png" alt="EchoTradez" width="160" height="145">
-            </a>
-          <p class="font-weight-bold">
-          </p>
-        </div>
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">  
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
-          </p>
-        </div>
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">         
-          <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 11205, US</p>
-          <p>
-            <i class="fas fa-envelope me-3"></i>
-            ajohn@brooklynsteamcenter.org<br>
-            lvergara@brooklynsteamcenter.org<br>
-            scardenas@brooklynsteamcenter.org<br>
-            jbaird@brooklynsteamcenter.org
-          </p>
-          <p><i class="fas fa-phone me-3"></i>+1 347-464-3680</p>
-        </div>
+      <div class="flex-grow-1"></div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+          <li class="nav-item">
+            <a class="nav-link text-white border-bottom border-primary" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="shopping.html">Shopping</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="Team page.html"> Team Members </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white " href="echosubscription.html"> Subscription</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white " href="Contact_Page.html"> Contact</a>
+          </li>
+     </div>
+     
+
+      <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
+      <div>
+        <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
+            width="30" class="d-inline-block align-text-top"></a>
       </div>
     </div>
-  </section>
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </nav>
+  <p class="display-1 text-center mx-auto p-2 font-weight-normal"><span class="text-secondary"> Cop </span> &amp; <span
+      class="text-primary">Swap</span></p>
+  <br><br><br>
+  <div class="col-2 mx-auto">
+    <a class="btn btn-secondary btn-lg px-5 py-3 text-se" aria-current="page" href="sign-up.html"><span
+        class="text-warning">Get Started</span></a>
   </div>
-</footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <br><br><br><br>
+  <p class="display-3 text-center text-secondary font-size-mid">Our Mission</p>
+  <br><br>
+  <p class="font-size-small text-center ">Our mission is to revolutionize the trading and sales market by providing a
+    seamless trading and
+    buying platform that fosters trust, transperancy, and prosperity for all our customers.</p>
+  <br><br>
+  <p class="display-3 text-center text-primary font-size-mid">What We Do</p>
+  <br><br>
+  <p class="font-size-small text-center">We are a company that noticed the fact that there are no trading and shopping
+    websites.
+    So with this newfound knowledge we took it upon ourselves to make that into a reality. This website is the result.
+    Here you can purchase items from providers, or trade items with other users. You have the freedom with no limits.
+    Here you can <a href="shopping.html"><span class="text-secondary">Cop</span></a> &amp;
+    <a href="tradingpage.html"><span class="text-primary">Swap</span></a>.
+  </p>
+  <br><br>
+  <p class="text-secondary text-center display-3 font-size-mid">Testimonial</p>
+  <br><br>
+  <ol class="font-size-small">
+    <li>
+      <p>David L.: "I was hesitant to spend money on another [type of product], but after seeing
+        the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p>
+    </li>
+    <li>
+      <p>Michael S.: "I've been struggling with [problem] for years,
+        but ever since I started using this service, everything has turned around for me. I can't recommend it enough!"
+      </p>
+    </li>
+    <li>
+      <p>Emily R.: "I've tried countless solutions, but nothing worked until I found this product.
+        It's like a miracle in a bottle. I've never felt better!"</p>
+    </li>
+    <li>
+      <p>David L.: "I was hesitant to spend money on another [type of product],
+        but after seeing the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"
+      </p>
+    </li>
+  </ol>
+  <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <div class="me-5 d-none d-lg-block">
+        <span>Get connected with us on social networks:</span>
+      </div>
+      <div>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+    </section>
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <div class="row mt-3">
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-4"></i>EchoTradez
+            </h6>
+            <a href="#!">
+              <img src="images/Logo Transparent.png" alt="EchoTradez" width="160" height="145">
+            </a>
+            <p class="font-weight-bold">
+            </p>
+          </div>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful links
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">Pricing</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Settings</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Orders</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Help</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
+            <p><i class="fas fa-home me-3"></i> New York, NY 11205, US</p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              ajohn@brooklynsteamcenter.org<br>
+              lvergara@brooklynsteamcenter.org<br>
+              scardenas@brooklynsteamcenter.org<br>
+              jbaird@brooklynsteamcenter.org
+            </p>
+            <p><i class="fas fa-phone me-3"></i>+1 347-464-3680</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2021 Copyright:
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 </body>
+
 </html>
