--- a/shopping.html
+++ b/shopping.html
@@ -23,13 +23,13 @@
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link text-white border-bottom border-primary"  href="index.html">Home</a>
+                <a class="nav-link text-white "  href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white border-bottom border-primary" href="shopping.html">Shopping</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white border-bottom border-primary" href="faqpage.html"> F.A.Q. </a>
+                <a class="nav-link text-white " href="faqpage.html"> F.A.Q. </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="Team page.html"> Team Members </a>
